[package]
name = "lemon"
version = "0.2.1"
edition = "2024"

[lib]
name = "lemon"
path = "src/lib.rs"

[[bin]]
name = "lemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-rustls = "0.27"
http-body-util = { version = "0.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4", features = ["derive"] }
mime = "0.3"
mime_guess = "2.0"
futures = "0.3.31"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
httpdate = "1.0"
rustls = { version = "0.23.25", features = ["std"] }
tokio-rustls = "0.26"
rustls-acme = { version = "0.13" }
rustls-pemfile = "2.1"
webpki-roots = "0.26"
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0.97"
async-trait = "0.1.88"
bytes = "1.10.1"
url = "2.5.4"
moka = { version = "0.12", features = ["future"] }
libc = "0.2"
rustls-native-certs = "0.7"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd"] }
tracing-appender = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
portpicker = "0.1"
once_cell = "1"
serde_json = "1"
hyper-util = { version = "0.1", features = ["full"] }

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 'z'  
lto = true       
codegen-units = 1 
panic = 'abort'  
strip = true     